# dot.work

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.test  MIGRATION_VISUAL_GUIDE.txt  README.md  VERSION_MANAGEMENT_ANALYSIS.md  VERSION_MANAGEMENT_INDEX.md  VERSION_MANAGEMENT_QUICK_REF.md  agent-loop.md  bug.md  chat-harness.md  coverage.xml  docker-compose.test.yml  ideas.md  install.sh  loop_opt.md  memory_leak.md  move-original-submodules-report.csv  pyproject.toml  skills_agents_guid.md  split.md  tasks.md  tmp.md  validation-report.json  version.json
EXPORTED_PROJECTS/dot-git/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-git/src/dot_git/: __init__.py  cli.py  formatters.py
EXPORTED_PROJECTS/dot-git/tests/unit/: test_complexity.py  test_file_analyzer.py  test_git_cli.py  test_git_service.py  test_models.py  test_tag_generator.py
EXPORTED_PROJECTS/dot-harness/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-harness/src/dot_harness/: __init__.py
EXPORTED_PROJECTS/dot-harness/tests/unit/: test_client.py  test_tasks.py
EXPORTED_PROJECTS/dot-issues/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-issues/src/dot_issues/: __init__.py  cli.py
EXPORTED_PROJECTS/dot-issues/tests/unit/: conftest.py  test_bulk_service.py  test_cli_validation.py  test_config.py  test_config_path_traversal.py  test_cycle_detection_n_plus_one.py  test_dependency_service.py  test_entities.py  test_epic_service.py  test_issue_service.py  test_json_templates.py  test_label_service.py  test_search_service.py  test_sqlite.py  test_stats_service.py  test_templates.py
EXPORTED_PROJECTS/dot-kg/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-kg/src/dot_kg/: __init__.py  cli.py  graph.py  render.py  scope.py  search_fts.py  search_semantic.py
EXPORTED_PROJECTS/dot-kg/tests/unit/: conftest.py  test_cli.py  test_collections.py  test_config.py  test_db.py  test_embed.py  test_graph.py  test_ids.py  test_parse_md.py  test_render.py  test_scope_caching.py  test_search_fts.py  test_search_scope.py  test_search_semantic.py
EXPORTED_PROJECTS/dot-overview/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-overview/src/dot_overview/: __init__.py  pipeline.py  reporter.py
EXPORTED_PROJECTS/dot-overview/tests/unit/: __init__.py  conftest.py  test_code_parser.py  test_markdown_parser.py  test_models.py  test_pipeline.py  test_scanner.py
EXPORTED_PROJECTS/dot-python/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-python/src/dot_python/: __init__.py
EXPORTED_PROJECTS/dot-python/tests/unit/: __init__.py
EXPORTED_PROJECTS/dot-version/: README.md  pyproject.toml
EXPORTED_PROJECTS/dot-version/src/dot_version/: __init__.py  changelog.py  cli.py  config.py  manager.py  project_parser.py
EXPORTED_PROJECTS/dot-version/tests/unit/: __init__.py  conftest.py  test_changelog.py  test_cli.py  test_commit_parser.py  test_config.py  test_manager.py  test_project_parser.py
incoming/crampus/birdseye/: README.md  build.py  chat.md  pyproject.toml
incoming/crampus/birdseye/project-docs/: bugs.md  history.md
incoming/crampus/birdseye/samples-report/: birdseye_overview.md  birdseye_overview_human.md  documents.json  features.json
incoming/crampus/birdseye/tests/: conftest.py  test_cli.py  test_code_parser.py  test_pipeline.py  test_reporter.py
incoming/crampus/builder/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_SUMMARY.md  PROJECT_COMPLETE.md  README.md  pyproject.toml
incoming/crampus/builder/builder/: __init__.py  cli.py  runner.py
incoming/crampus/builder/docs/: usage-guide.md
incoming/crampus/builder/tests/: __init__.py  test_runner.py
incoming/crampus/git-analysis/: README.md  pyproject.toml
incoming/crampus/git-analysis/examples/: basic_usage.py
incoming/crampus/git-analysis/tests/: __init__.py  test_models.py
incoming/crampus/prompt-builder/: README.md  pyproject.toml
incoming/crampus/prompt-builder/examples/: basic_usage.py
incoming/crampus/prompt-builder/tests/: __init__.py  test_cli.py  test_models.py
incoming/crampus/regression-guard/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_COMPLETE.md  PROJECT_SUMMARY.md  README.md  alternative-chat.md  pyproject.toml
incoming/crampus/regression-guard/docs/: development.md  installation.md  integration-examples.md  quick-reference.md  usage-guide.md
incoming/crampus/regression-guard/regression_guard/: __init__.py  capture_baseline.py  cli.py  decompose.py  orchestrator.py  validate_incremental.py  validate_integration.py
incoming/crampus/regression-guard/tests/: __init__.py  test_orchestrator.py
incoming/crampus/repo-agent/: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  Dockerfile.smart-alpine  README.md  auth.json.template  chat.md  load-env.ps1  opencode.json  pyproject.toml
incoming/crampus/repo-agent/docs/: PROJECT_STATUS.md  READY_FOR_PUBLIC.md  SECURITY.md  SECURITY_ANALYSIS.md  TESTING_SUMMARY.md  TEST_COVERAGE.md  code-review-setup.md  code_review_report.md  opencode-limitations.md  security-checklist.md
incoming/crampus/repo-agent/examples/: instructions.example.md  test-haiku-instructions.md  test-init.md  test-openrouter-haiku.md
incoming/crampus/repo-agent/tests/: conftest.py  test_cli.py  test_coderabbit_config.py  test_core.py  test_integration.py  test_templates.py  test_validation.py
incoming/crampus/version-management/: README.md  ideas.md  pyproject.toml
incoming/crampus/version-management/tests/: __init__.py  test_project_parser.py
incoming/dotwork/: Dockerfile  Focused Testing & Maintainable Architecture.md  README.md  best-practices-check.prompt.md  build.py  ci.yml  code-analysis.prompt.md  copilot-instructions.md  docker-compose.yml  docker-publish.yml  docs.yml  pyproject.toml  stories.md
incoming/kg/: AGENTS.md  README.md  pyproject.toml
incoming/kg/.docs/: chat-2.md  chat-3.md  chat.md  repomix-output-weholt-crampus.xml
incoming/kg/.github/prompts/: do-work.prompt.md  (+2 more)
incoming/kg/.work/: baseline.md
incoming/kg/tests/: conftest.py
incoming/review/: AGENTS.md  MIGRATION.md  README.md  chat.md  pyproject.toml
incoming/review/tests/: conftest.py
(+909 files in other folders)
