[project]
name = "dot-work"
version = "0.1.1"
description = "Portable AI coding prompts for project scaffolding and issue tracking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ai", "prompts", "scaffolding", "copilot", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
# Core dependencies only - submodules are now optional plugins
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    # Core features that remain in dot-work
    "GitPython>=3.1.0",  # For prompts module (git operations)
    "python-dotenv>=1.0.0",  # For version module
    "gitignore-parser>=0.1.0",  # For zip module
]

[project.optional-dependencies]
# Plugin bundles - install all or individual plugins
# Note: These are placeholder groups for when plugins are published
# To install plugins, use: pip install dot-issues dot-kg dot-review etc.
all = [
    # When plugins are published, install all with:
    # pip install 'dot-work[all]' dot-issues dot-kg dot-review dot-container
    #                      dot-git dot-harness dot-overview dot-python dot-version
    "requests>=2.28.0",  # zip-upload
    "httpx>=0.27.0",  # kg-http, version-llm
    "hnswlib>=0.8.0",  # kg-ann
    "sqlite-vec>=0.1.0",  # kg-vec
    "openai>=1.0.0",  # git-llm
    "anthropic>=0.3.0",  # git-llm
    "networkx>=3.0",  # scan-graph
    "pyvis>=0.3.0",  # scan-graph
    "claude-agent-sdk>=0.1.0",  # harness
    "anyio>=4.0.0",  # harness
]
# Individual plugin features (for backward compatibility during migration)
zip-upload = ["requests>=2.28.0"]
kg-http = ["httpx>=0.27.0"]
kg-ann = ["hnswlib>=0.8.0"]
kg-vec = ["sqlite-vec>=0.1.0"]
kg-all = [
    "httpx>=0.27.0",
    "hnswlib>=0.8.0",
    "sqlite-vec>=0.1.0",
]
git-llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]
version-llm = ["httpx>=0.24.0"]
scan-graph = ["networkx>=3.0", "pyvis>=0.3.0"]
harness = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",  # Timeout for hanging tests
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "psutil>=6.0.0",  # Memory leak detection in tests
]

[project.scripts]
dot-work = "dot_work.cli:app"

[project.entry-points."dot_work.plugins"]
# Register submodules as plugins (for future extraction to standalone packages)
# These entry points allow extracted packages to register their CLI commands
# Examples (when extracted):
# issues = "dot_issues"
# kg = "dot_kg"
# review = "dot_review"
# container = "dot_container"
# git = "dot_git"
# harness = "dot_harness"
# overview = "dot_overview"
# python = "dot_python"
# version = "dot_version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_work"]
ignore-vcs = true
artifacts = [
    "src/dot_work/prompts/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/dot_work",
    "src/dot_work/prompts/*",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.js", "*.jsx", "*.ts", "*.tsx"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# S701: Autoescape disabled - intentional for markdown templates (not HTML)
"src/dot_work/installer.py" = ["S701"]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "--strict-markers"]
testpaths = ["tests", "src"]
pythonpath = ["src"]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "incoming",
  "*.egg-info",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
