[project]
name = "dot-work"
version = "0.1.1"
description = "Portable AI coding prompts for project scaffolding and issue tracking"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["ai", "prompts", "scaffolding", "copilot", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "gitignore-parser>=0.1.0",
    "jinja2>=3.0.0",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "psutil>=6.0.0",
]

[project.scripts]
dot-work = "dot_work.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_work"]
ignore-vcs = true
artifacts = [
    "src/dot_work/prompts/*",
    "src/dot_work/bundled_skills/*",
    "src/dot_work/bundled_subagents/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/dot_work",
    "src/dot_work/prompts/*",
    "src/dot_work/bundled_skills/*",
    "src/dot_work/bundled_subagents/*",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*.js", "*.jsx", "*.ts", "*.tsx"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/dot_work/installer.py" = ["S701"]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "--strict-markers"]
testpaths = ["tests", "src"]
pythonpath = ["src"]
norecursedirs = [
  ".*",
  "build",
  "dist",
  "incoming",
  "*.egg-info",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
