[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot-git"
version = "0.1.0"
description = "Git history analysis and complexity metrics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    typer>=0.12.0
    rich>=13.0.0
    GitPython>=3.1.0
    radon>=6.0.0
    tqdm>=4.66.0,
]

[project.optional-dependencies]
llm = [
        "openai>=1.0.0
        anthropic>=0.3.0",
    ]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dot-git = "dot_git.cli:app"
# No standalone scripts

[project.entry-points."dot_work.plugins"]
git = "dot_git"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_git"]
artifacts = [
    # No static assets,
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["B009", "B904"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
