[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot-kg"
version = "0.1.0"
description = "Knowledge graph with FTS5 search for code analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    typer>=0.12.0
    rich>=13.0.0
    numpy>=1.24.0,
]

[project.optional-dependencies]
http = [
        "httpx>=0.27.0",
    ]
ann = [
        "hnswlib>=0.8.0",
    ]
vec = [
        "sqlite-vec>=0.1.0",
    ]
all = [
        "httpx>=0.27.0
        hnswlib>=0.8.0
        sqlite-vec>=0.1.0",
    ]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dot-kg = "dot_kg.cli:app"
    "kg = "dot_kg.cli:app""

[project.entry-points."dot_work.plugins"]
kg = "dot_kg"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_kg"]
artifacts = [
    # No static assets,
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["B009", "B904"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
