[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot-overview"
version = "0.1.0"
description = "Codebase overview generation with AST parsing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    typer>=0.12.0
    rich>=13.0.0
    libcst>=1.1.0,
]

[project.optional-dependencies]
# No optional dependencies

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dot-overview = "dot_overview.cli:app"
# No standalone scripts

[project.entry-points."dot_work.plugins"]
overview = "dot_overview"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_overview"]
artifacts = [
    # No static assets,
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["B009", "B904"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
