[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dot-python"
version = "0.1.0"
description = "Python project build and scan utilities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    typer>=0.12.0
    rich>=13.0.0,
]

[project.optional-dependencies]
scan-graph = [
        "networkx>=3.0
        pyvis>=0.3.0",
    ]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dot-python = "dot_python.cli:app"
    "pybuilder = "dot_python.cli:app""

[project.entry-points."dot_work.plugins"]
python = "dot_python"

[tool.hatch.build.targets.wheel]
packages = ["src/dot_python"]
artifacts = [
    # No static assets,
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["B009", "B904"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
