[project]
name = "kgshred"
version = "0.1.0"
description = "CLI knowledge-graph shredder for plain text/Markdown with lossless reconstruction"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Thomas Weholt", email = "thomas@weholt.org" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.9.0",
]

[project.optional-dependencies]
http = [
  "httpx>=0.27.0",
]
ann = [
  "hnswlib>=0.8.0",
]
yaml = [
  "pyyaml>=6.0.0",
]
all = [
  "httpx>=0.27.0",
  "hnswlib>=0.8.0",
  "pyyaml>=6.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pytest-timeout>=2.4.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.0",
]

[project.scripts]
kg = "kgshred.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kgshred"]

[tool.hatch.build.targets.sdist]
include = ["src/kgshred"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/kgshred"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "src/kgshred/cli.py",
]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "PT"]
ignore = ["E501", "B008", "B904"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/"]
