[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birdseye"
version = "0.1.0"
description = "birdseye: show me your source and I will tell you who you are"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "birdseye Team", email = "dev@example.com"}
]
keywords = ["mcp", "rag", "search", "markdown", "semantic", "vector", "analysis", "overview"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "libcst>=1.1",
    "radon>=6.0",
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
birdseye = "birdseye.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/birdseye"
Repository = "https://github.com/your-username/birdseye"
Issues = "https://github.com/your-username/birdseye/issues"
Documentation = "https://github.com/your-username/birdseye#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/birdseye"]

[tool.hatch.build.targets.sdist]
include = [
    "src/birdseye",
    "README.md",
    "pyproject.toml",
    "tests",
]

[tool.bandit]
targets = ["src/birdseye"]
exclude_dirs = ["tests", "build", "scripts", ".venv"]
skips = []

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = false
include = '\\.(pyi?|py)$'
extend-exclude = '''
/(
  \\.
    (eggs|git|hg|mypy_cache|pytest_cache|tox|venv)
  | build
  | dist
  | htmlcov
  | .venv
)
/'''

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
multi_line_output = 3

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S110", "T201"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
strict_optional = false
exclude = [
    "tests",
    "scripts",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "libcst.*",
    "radon.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/birdseye",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--timeout=5",
    "--timeout-method=thread",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/birdseye"]
omit = [
    "tests/*",
    ".venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "mypy>=1.8",
    "ruff>=0.5",
    "black>=24.0",
]
